# play-with-halide

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: FindHalide.cmake
examples/: CMakeLists.txt
examples/colorformat/: ColorFormat.cpp  ColorFormat.h  format_transform-v1.cpp  format_transform-v1.h  format_transform-v2.cpp
examples/sample/: CMakeLists.txt  sample_generator.cpp
scripts/: build-halide.sh
tutorials/: CMakeLists.txt
